2008-11-11  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        - https://bugs.webkit.org/show_bug.cgi?id=22160
        speculative fix for <rdar://problem/5995450> Nil deref because nextLinePosition
        (previousLinePosition, too) uses a nil node

        * editing/visible_units.cpp:
        (WebCore::nextLinePosition): Use RenderObject::node instead of RenderObject::element
        to check editingIgnoresContent. It makes sense to use the associated DOM node for
        this, even in cases of anonymous content, and it avoids the case where element() can
        be 0.
        (WebCore::previousLinePosition): Ditto.

2008-11-11  Dirk Schulze  <vbs85@gmx.de>

        Reviewed by Darin Adler.

        Removed default: in applySpreadMethod. This causes the problems
        in radial gradients. We don't need CAIRO_EXTEND_NONE in SVG, Canvas
        or CSS.

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::applySpreadMethod):

2008-11-11  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Tor Arne Vestbø.

        Fix crash when rendering the file chooser.
        Also proper implementation for multi-selected files.

        * platform/qt/FileChooserQt.cpp:
        (WebCore::FileChooser::basenameForWidth):

2008-11-11  Dirk Schulze  <vbs85@gmx.de>

        Reviewed by Oliver Hunt.

        PatternCairo needs to invert the pattern matrix because
        of transformation from user space to pattern space.
        Give a identity matrix to pattern for Qt and Cairo. Because the 
        context is transformed already.

        [CAIRO][QT] Canvas transformations applied twice to Patterns
        https://bugs.webkit.org/show_bug.cgi?id=21555

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::fillPath):
        (WebCore::GraphicsContext::strokePath):
        * platform/graphics/cairo/PatternCairo.cpp:
        (WebCore::Pattern::createPlatformPattern):