@@ -1,0 +1,5 @@
+<html>
+<body>
+<h1>Zooming Menu List</h1>
+
+<select style="zoom:3"><option>One<option>Two<option>Three<Option>Four</select>
